# Galcon

./: LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
cq_galcon/game/: constants.py  entity.py  game.py
