[tool.poetry]
name = "cq-galcon"
version = "0.1.0"
description = ""
authors = ["AlexandreOuellet <alexandre.ouellet.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vectormath = "^0.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true
